# t1_moscow

./: .gitignore  01_initial_db.sql  02_initial_funcs.sql  LICENSE  README.md  docker-compose.yml  docker-swarm.yml  initial_db.sql
backend/: Dockerfile  pyproject.toml
backend/src/: config.py  jwt.py  logger.py  main.py
backend/src/presentations/: __init__.py  api.py  assistants.py  auth.py  data.py  user.py
backend/src/repositories/: db_context_interface.py  sqlalc_models.py
backend/src/repositories/minio/: base_crud.py  minio_context.py
backend/src/repositories/postgres/: __init__.py  assistant.py  base_crud.py  data.py  postgres_context.py  user.py
backend/src/schemas/: assistants.py  user.py
backend/src/services/: ml.py  parse_data.py  utils.py
frontend/: Dockerfile  Navbar.tsx  Outlet.tsx  index.css  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/pages/: index.tsx
frontend/pages/chats/: [id].tsx  index.tsx
frontend/shared/: Lottie.tsx  useInput.ts
frontend/shared/Modals/: Modals.tsx  index.ts
frontend/shared/Notifications/: Notifications.tsx
frontend/src/: App.tsx  Layout.tsx  assistants.ts  index.css  main.tsx
frontend/src/components/: AdminNavbar.tsx  AuthForm.tsx  FilesDropzone.tsx  Google.tsx  Navbar.tsx  Twitter.tsx
frontend/src/pages/: admin.tsx  create.tsx  index.tsx
frontend/src/shared/: ImageComponent.tsx  RitmLogo.tsx  api.ts  types.d.ts
frontend/src/zustand/: user.ts
ml/: .gitignore  Dockerfile  pyproject.toml
ml/src/: config.py  main.py
ml/src/presentations/: __init__.py  api.py  (+1 more)
(+13 files in other folders)
