[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["ParkieV <st-psk@mail.ru>"]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.5"
pydantic = "^2.9.2"
email-validator = "^2.2.0"
pydantic-settings = "^2.6.1"
uvicorn = {extras = ["standard"], version = "^0.32.0"}
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
colorlog = "^6.9.0"
attrs = "^24.2.0"
python-multipart = "^0.0.17"
bcrypt = "3.1.7"
rapidfuzz = "^3.10.1"
aiohttp = "^3.11.2"
sqlalchemy = "^2.0.36"
dependency-injector = "^4.43.0"
asyncpg = "^0.30.0"
psycopg2 = "^2.9.10"
fitz = "^0.0.1.dev2"
pymupdf = "^1.24.14"
python-docx = "^1.1.2"
minio = "^7.2.12"
beautifulsoup4 = "^4.12.3"
scapy = "^2.6.1"
sentence-transformers = "^3.3.1"
bitsandbytes = "0.42.0"
faiss-cpu = "^1.9.0.post1"
transformers = "^4.46.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
